# src/main/java/com/krzysiek/rest/rest_app/entity/Subject.java
@@ -1,0 +1,32 @@
+package com.krzysiek.rest.rest_app.entity;
+
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+import lombok.ToString;
+
+import javax.persistence.*;
+import java.util.Set;
+
+@Entity
+@Data
+@NoArgsConstructor
+@SequenceGenerator(name = "seq_subject", initialValue = 100, allocationSize = 1)
+public class Subject {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "seq_subject")
+    @JsonIgnore
+    private Long id;
+
+    private String name;
+
+    @ToString.Exclude
+    @EqualsAndHashCode.Exclude
+    @ManyToMany(mappedBy = "subjects")
+    @JsonIgnore
+    Set<Student> students;
+
+
+}
