# src/main/java/com/krzysiek/rest/rest_app/resource/StudentResource.java
@@ -4,8 +4,10 @@ import com.fasterxml.jackson.databind.ser.FilterProvider;
 import com.fasterxml.jackson.databind.ser.impl.SimpleBeanPropertyFilter;
 import com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider;
 import com.krzysiek.rest.rest_app.entity.Student;
+import com.krzysiek.rest.rest_app.entity.Subject;
 import com.krzysiek.rest.rest_app.repository.IStudentRepository;
 import com.krzysiek.rest.rest_app.exception.ElementNotFoundException;
+import com.krzysiek.rest.rest_app.repository.ISubjectRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
 import org.springframework.context.i18n.LocaleContextHolder;
@@ -24,18 +26,23 @@ import javax.validation.Valid;
 import java.net.URI;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @RestController
+@RequestMapping("/students")
 public class StudentResource {
 
     @Autowired
     private IStudentRepository studentRepository;
 
     @Autowired
+    private ISubjectRepository subjectRepository;
+
+    @Autowired
     private MessageSource messageSource;
 
-    @GetMapping("/students")
+    @GetMapping()
     public MappingJacksonValue getAllStudents() {
         List<Resource<Student>> studentResources = studentRepository.findAll().stream()
                 .map(this::createStudentResource)
@@ -44,16 +51,23 @@ public class StudentResource {
         return getStudentMappingJacksonValue(studentResources, filter);
     }
 
-    @GetMapping("/students/{id}")
+    @GetMapping("/{id}")
     public MappingJacksonValue getStudentById(@PathVariable Long id) {
         Optional<Student> studentOptional = studentRepository.findById(id);
         checkStudentExists(id, studentOptional);
-        Resource<Student> resource = createLinkToAllStudents(studentOptional.get());
+        Resource<Student> resource = createLinkForStudent(studentOptional.get());
         SimpleBeanPropertyFilter filter = SimpleBeanPropertyFilter.filterOutAllExcept("id","firstName", "secondName", "yearOfStudy", "birthday", "email");
         return getStudentMappingJacksonValue(resource, filter);
     }
 
-    @PostMapping("/students")
+    @GetMapping("/{id}/subjects")
+    public Set<Subject> getAllSubjectsForStudent(@PathVariable Long id) {
+        Optional<Student> studentOptional = studentRepository.findById(id);
+        checkStudentExists(id, studentOptional);
+        return studentOptional.get().getSubjects();
+    }
+
+    @PostMapping()
     public ResponseEntity<Object> addNewStudent(@Valid @RequestBody Student newStudent) {
         studentRepository.save(newStudent);
 
@@ -65,8 +79,23 @@ public class StudentResource {
         return ResponseEntity.created(location).build();
     }
 
+//    @PostMapping("/id/subjects")
+//    public ResponseEntity<Object> addNewSubjectToStudent(@PathVariable Long id, @RequestBody Subject subject) {
+//        Optional<Student> studentOptional = studentRepository.findById(id);
+//        checkStudentExists(id, studentOptional);
+////        subject.getStudents().add(studentOptional.get());
+//        studentOptional.get().getSubjects().add(subject);
+////        subjectRepository.save(subject);
+//        studentRepository.save(studentOptional.get());
+//        URI location = ServletUriComponentsBuilder.fromCurrentRequest()
+//                .path("/{id}")
+//                .buildAndExpand(subject.getId())
+//                .toUri();
+//        return ResponseEntity.created(location).build();
+//    }
+
     // another possibility is 204 status (No content) return
-    @DeleteMapping("/students/{id}")
+    @DeleteMapping("/{id}")
     public void deleteStudentById(@PathVariable Long id) {
         studentRepository.deleteById(id);
     }
@@ -78,15 +107,16 @@ public class StudentResource {
     }
 
     //    HATEOAS
-    private Resource<Student> createLinkToAllStudents(Student student) {
+    private Resource<Student> createLinkForStudent(Student student) {
         Resource<Student> resource = new Resource<>(student);
-        ControllerLinkBuilder linkToAllStudents = linkTo(methodOn(this.getClass()).getAllStudents());
-        resource.add(linkToAllStudents.withRel(getTranslateMessage("all.students.link")));
+        Link studentSubjects = linkTo(methodOn(this.getClass()).getAllSubjectsForStudent(student.getId())).withRel(getTranslateMessage("student.subjects.link"));
+        Link linkToAllStudents = linkTo(methodOn(this.getClass()).getAllStudents()).withRel(getTranslateMessage("all.students.link"));
+        resource.add(studentSubjects, linkToAllStudents);
         return resource;
     }
 
     private Resource<Student> createStudentResource(Student student) {
-        Link studentDetailsLink = linkTo(methodOn(this.getClass()).getStudentById(student.getId())).withRel(getTranslateMessage("details.students.link"));
+        Link studentDetailsLink = linkTo(methodOn(this.getClass()).getStudentById(student.getId())).withRel(getTranslateMessage("student.details.link"));
         return new Resource<>(student, studentDetailsLink);
     }
 
