# src/main/resources/swaggerDoc.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "description": "Documentation for simple REST app",
-    "version": "2.0",
+    "version": "3.0",
     "title": "University API",
     "termsOfService": "urn:tos",
     "contact": {
@@ -1573,6 +1573,62 @@
         }
       }
     },
+    "/students/id/subjects": {
+      "post": {
+        "tags": [
+          "student-resource"
+        ],
+        "summary": "addNewSubjectToStudent",
+        "operationId": "addNewSubjectToStudentUsingPOST",
+        "consumes": [
+          "application/xml",
+          "application/json"
+        ],
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "id",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "in": "body",
+            "name": "subject",
+            "description": "subject",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Subject"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object"
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
     "/students/{id}": {
       "get": {
         "tags": [
@@ -1652,6 +1708,53 @@
           },
           "403": {
             "description": "Forbidden"
+          }
+        }
+      }
+    },
+    "/students/{id}/subjects": {
+      "get": {
+        "tags": [
+          "student-resource"
+        ],
+        "summary": "getAllSubjectsForStudent",
+        "operationId": "getAllSubjectsForStudentUsingGET",
+        "consumes": [
+          "application/xml",
+          "application/json"
+        ],
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "id",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Subject"
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
@@ -1797,6 +1900,12 @@
           "type": "string",
           "description": "Second name should have between 0-20 characters and can not be empty"
         },
+        "subjects": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Subject"
+          }
+        },
         "yearOfStudy": {
           "type": "integer",
           "format": "int32"
@@ -1808,6 +1917,14 @@
       "type": "object",
       "properties": {
         "contentType": {
+          "type": "string"
+        }
+      }
+    },
+    "Subject": {
+      "type": "object",
+      "properties": {
+        "name": {
           "type": "string"
         }
       }
